# dovecot-antispam-plugin

./: .hgignore  Makefile  README  antispam-plugin.c  antispam-plugin.h  autogen.sh  aux.c  aux.h  backends.c  backends.h  configure.ac  extra.mk.in  mailbox.c  mailbox.h  mailtrain.c  mailtrain.h  signature-log.c  signature-log.h  signature.c  signature.h  spool2dir.c  spool2dir.h  user.c  user.h
doc/: Makefile  dovecot-antispam.7.txt  txt2man
src/: .indent.pro  Makefile  antispam-plugin.c  aux.h  backends.c  backends.h  crm114.c  crm114.h  dspam.c  dspam.h  mailbox.c  mailbox.h  mailtrain.c  signature-log.c  signature.c  signature.h  spool2dir.c  user.c  user.h
